# ollmcp-marketplace

./: PKGBUILD
mcp-client-for-ollama/: README.md  pyproject.toml
mcp-client-for-ollama/cli-package/tests/: __init__.py  test_cli_import.py
mcp-client-for-ollama/mcp_client_for_ollama/: cli.py  client.py
mcp-client-for-ollama/mcp_client_for_ollama.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp-client-for-ollama/mcp_client_for_ollama/config/: defaults.py  manager.py
mcp-client-for-ollama/mcp_client_for_ollama/mcphub/: hub_config_manager.py  mcphub_manager.py  smithery_client.py
mcp-client-for-ollama/mcp_client_for_ollama/models/: config_manager.py  manager.py
mcp-client-for-ollama/mcp_client_for_ollama/server/: auth.py  connector.py  discovery.py
mcp-client-for-ollama/mcp_client_for_ollama/tools/: manager.py
mcp-client-for-ollama/mcp_client_for_ollama/utils/: connection.py  constants.py  fzf_style_completion.py  hil_manager.py  metrics.py  streaming.py  tool_display.py  version.py
mcp-client-for-ollama/scripts/: bump_version.py
mcp-client-for-ollama/tests/: test_mcphub.py  test_server_discovery.py
